quick fix, makes the image allow for links behind to be clicked

--- a/css/main.css
+++ b/css/main.css
@@ -29,4 +29,5 @@ footer {
   position: absolute;
   top: -10rem;
   width: 100%;
+  pointer-events: none;
 }
